# monorepo

./: .bazelrc  .classpath  .gitignore  .travis.yml  BUILD  CONTRIBUTING.md  LICENSE  NOMENCLATURE.md  README.md  WORKSPACE  angular.json  check-formatting.sh  commands.txt  compile.sh  countLinex.txt  dependencies.yaml  fix-formatting.sh  generate_build_files.sh  gitignore  http_archive_deps.prototxt  intellij_idea_set_up.md  log  mysadna_github_deploy_key.id_rsa.enc  reviewer_config.prototxt
.circleci/: config.yml  get-android-sdk.sh
.firebase/: hosting.ZGlzdC9wcm90b2Jpbi1yZWFkZXI.cache
angular-proto-firestore/: package-lock.json
angular-proto-firestore/proto/: data.proto
changes/: file.txt
common/: PROTOC.md  demo.proto  package.json  protoc.js  shared-proto.json
docs/: generation_build_files.md
ls-alg/main/: BUILD  Main.java
projects/: README.md
projects/OpenTrain/: BUILD.bazel
projects/OpenTrain/israel_railways_pipeline/: BUILD.bazel  count_lines.java
projects/OpenTrain/israel_railways_pipeline/data_handler/: CountLines.java
projects/Sensory_interface/: app.js  index.html
projects/angular/: README.md  angular.json  comlist.txt  package-lock.json  package.json  tslint.json
projects/angular-proto-firestore/: README.md  angular.json  gulpfile.js  package.json  proto.json
projects/avodata/: AvodataSolverTool.java  BUILD  README.md  check.csv  firstStage.py  requirements.txt
projects/data_analysis/: BUILD  README  README.md
projects/deploy/: .gitignore  package.json
projects/mysadna/: .gitignore  Dockerfile  README.md  angular.json  firebase.json  gulpfile.js  mysadna.proto  package.json  tslint.json
projects/mysadna2/: README.md  angular.json  show.txt
projects/noloan/: .gitignore  README.md  settings.gradle
projects/noloan2/: .gitignore  README.md  build.gradle
projects/opentrain/: BUILD
projects/program-website/: package.json  proto.json
projects/sensory_interface/: .firebaserc  index.html
projects/stackoverflow/: BUILD  DataExtractorTool.java  ExtractedRow.java
projects/storyteller/: package.json
src/app/: app.module.ts
src/environments/: environment.prod.ts  environment.ts
tools/: bazel.rc  update_deps.sh
tools/cas_proxy/: AccessManager.java  BUILD  Proxy.java  ProxyClientTool.java  PublicAccess.java  api.proto
tools/checkstyle/: BUILD  config.xml
tools/data_store/: BUILD  DataStore.java  DataStoreTool.java  Storyteller.java  StorytellerTool.java
tools/local_server/: .gitignore  BUILD  LocalServer.java  (+1 more)
(+874 files in other folders)
