genrule(
    name = "open_train",
    srcs = [
        "@gtfs_data//:stops.txt",
        "@gtfs_data//:routes.txt",
        "@gtfs_data//:trips.txt",
        "@gtfs_data//:samples.txt",
    ],
    outs = ["output.txt"],
    cmd = "$(location //projects/OpenTrain/israel_railways_pipeline:israel_railways_pipeline) $(location @gtfs_data//:stops.txt) $(location @gtfs_data//:routes.txt) $(location @gtfs_data//:trips.txt) $(location @gtfs_data//:samples.txt) $@",
    tools = ["//projects/OpenTrain/israel_railways_pipeline"],
)
