genrule(
    name = "open_train",
    srcs = [
        #"@csv_data//:samples.csv",
        "@csv_data//:routes.csv",
        #"@csv_data//:stops.csv",
        #"@csv_data//:trips.csv",
    ],
    outs = ["output.txt"],
    cmd = "$(location //projects/OpenTrain/israel_railways_pipeline:israel_railways_pipeline) $(location @csv_data//:routes.csv) $@",
    tools = ["//projects/OpenTrain/israel_railways_pipeline"],
)
